# flint

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml  update_diary.py
.github/workflows/: ci.yml
docs/: PRE-COMMIT.md
scripts/: setup-pre-commit.sh
src/: cli.py  main.py
src/plugins/: diary.py  homeassistant.py  mcp.py  photo.py  rag.py  schedule.py  todoist.py
src/telega/: main.py  settings.py
src/utils/: __init__.py  file_operations.py  obsidian.py  todoist.py
tests/: README.md  __init__.py  conftest.py  test_diary.py  test_photo.py  test_rag.py  test_schedule.py  test_settings.py  test_telega.py  test_todoist.py  test_todoist_plugin.py
