[project]
name = "flint"
version = "0.1.0"
description = "Telegram bot helping you with various tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.31.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
    "unstructured[md]>=0.18.14",
]
