[project]
name = "flint"
version = "0.1.0"
description = "Telegram bot helping you with various tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.31.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
    "unstructured[md]>=0.18.14",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.0", "types-PyYAML>=6.0.12", "types-Pillow>=10.2.0"]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "faker>=25.0.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "google.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langchain_core.*",
    "mcp.*",
    "pytz.*",
    "dotenv.*",
    "structlog.*",
    "unstructured.*",
]
ignore_missing_imports = true

[project.scripts]
typecheck = "mypy src/"
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src --cov-report=term-missing"
