[project]
name = "flint"
version = "0.1.0"
description = "Telegram bot helping you with various tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chatgpt-md-converter>=0.3.10",
    "google-genai>=1.31.0",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-google-genai>=2.1.10",
    "mcp>=1.13.1",
    "pillow>=11.3.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]>=22.3",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "structlog>=25.4.0",
    "todoist-api-python>=2.0.0",
    "unstructured[md]>=0.18.14",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.12",
    "types-Pillow>=10.2.0",
    "pre-commit>=3.8.0",
    "ruff>=0.7.4",
]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.0",
    "faker>=25.0.0",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "google.*",
    "langchain.*",
    "langchain_community.*",
    "langchain_google_genai.*",
    "langchain_core.*",
    "mcp.*",
    "pytz.*",
    "dotenv.*",
    "structlog.*",
    "todoist_api_python.*",
    "unstructured.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [".venv", ".mypy_cache", ".pytest_cache", ".ruff_cache"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "W191", # indentation contains tabs
]

[tool.ruff.format]
# Use ruff's formatter instead of black
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"] # Unused function arguments in tests

[tool.ruff.lint.isort]
known-third-party = [
    "telegram",
    "google",
    "langchain",
    "mcp",
    "PIL",
    "dotenv",
    "pydantic",
    "structlog",
    "todoist_api_python",
    "unstructured",
]

[tool.basedpyright]
pythonVersion = "3.13"
include = ["src", "tests"]
exclude = [
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    "**/__pycache__",
]

# Type checking settings
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = "warning"
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportWildcardImportFromLibrary = true
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportPrivateUsage = true
reportConstantRedefinition = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportUntypedFunctionDecorator = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportCallInDefaultInitializer = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportUnnecessaryContains = true
reportAssertAlwaysTrue = true
reportSelfClsParameterName = true
reportImplicitStringConcatenation = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedCoroutine = true
reportUnnecessaryTypeIgnoreComment = true
reportMatchNotExhaustive = true
reportExplicitAny = false
